@@ -32,7 +32,7 @@
         <ee_out/>
         <skipTests>${maven.skip.tests}</skipTests>
         <skip.dep.copy>${skipSparkPrepare}</skip.dep.copy>
-        <argLine>-Xmx4g -XX:MaxPermSize=256m ${jacocoAgent}</argLine>
+        <argLine>-Xms64m -Xmx4g ${jacocoAgent}</argLine>
     </properties>
     <dependencies>
         <dependency>
@@ -768,7 +768,7 @@
                             <threadCount>1</threadCount>
                             <!-- -sf- single-threaded for now -->
                             <perCoreThreadCount>false</perCoreThreadCount>
-                            <argLine>-Xmx5g</argLine>
+                            <argLine>-Xmx2g -Xms64m</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <dependenciesToScan>
                                 <dependency>com.splicemachine:splice_machine</dependency>
@@ -789,7 +789,7 @@
                         </goals>
                         <configuration>
                             <groups>com.splicemachine.test.RestoreTest</groups>
-                            <argLine>-Xmx3g</argLine>
+                            <argLine>-Xmx2g -Xms64m</argLine>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <includes>
                                 <include>**/*RestoreIT.java</include>
@@ -1055,7 +1055,9 @@
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-Dzookeeper.sasl.client=false</argument>
                                 <argument>-Xmx1g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xms64g</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=40</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>com.splicemachine.kafka.TestKafkaCluster</argument>
                                 <argument>localhost:2181</argument>
@@ -1124,8 +1126,10 @@
                                 </argument>
                                 <argument>-Djava.net.preferIPv4Stack=true</argument>
                                 <argument>-Dzookeeper.sasl.client=false</argument>
+                                <argument>-Xms64m</argument>
                                 <argument>-Xmx1g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>
+                                <argument>-XX:MaxHeapFreeRatio=40</argument>
                                 <argument>-XX:+CMSClassUnloadingEnabled</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4002</argument>
                                 <argument>org.apache.zookeeper.server.ZooKeeperServerMain</argument>
@@ -1319,8 +1323,8 @@
                                 <argument>
                                     -Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/
                                 </argument>
-                                <argument>-Xmx6g</argument>
-                                <argument>-Xms1g</argument>
+                                <argument>-Xmx2g</argument>
+                                <argument>-Xms64g</argument>
                                 <!-- Spark Sys props -->
                                 <argument>-Dsplice.spark.app.name=SpliceMachine</argument>
                                 <argument>-Dsplice.spark.eventLog.enabled=true</argument>
@@ -1376,10 +1380,12 @@
                                     ${hbase.rootdir}
                                     -Dhdp.version=2.6.3
                                     -enableassertions
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=50
                                 </argument>
                                 <argument>-Dsplice.spark.yarn.am.extraJavaOptions=
                                     -Dhdp.version=2.6.3
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=50
                                 </argument>
                                 <argument>-Dsplice.spark.executor.extraJavaOptions=
                                     ${hbase.rootdir}
@@ -1388,6 +1394,8 @@
                                     -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4020
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
                                     -enableassertions
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=40
+                                    -XX:+UseG1GC
                                     ${jacocoAgent}
                                 </argument>
                                 <argument>-Dsplice.spark.yarn.user=${user.name}</argument>
@@ -1402,6 +1410,8 @@
                                     -enableassertions
                                     -Djava.net.preferIPv4Stack=true
                                     -Djava.security.krb5.conf=${project.build.directory}/krb5.conf
+                                    -Xms64m -XX:MinHeapFreeRatio=10 -XX:MaxHeapFreeRatio=40
+                                    -XX:+UseG1GC
                                 </argument>
                                 <argument>${spark.keytab}</argument>
                                 <argument>${spark.principal}</argument>
@@ -1410,17 +1420,9 @@
                                 <argument>-Dsplice.spark.shuffle.service.enabled=true</argument>
                                 <argument>-Dsplice.spark.storage.memoryFraction=0.1</argument>
                                 <argument>-Dsplice.spark.yarn.am.waitTime=10s</argument>
-                                <!-- CMS Garbage Collection -->
-                                <argument>-Xmn128m</argument>
-                                <argument>-XX:+UseConcMarkSweepGC</argument>
-                                <argument>-XX:+UseParNewGC</argument>
-                                <argument>-XX:NewSize=128m</argument>
-                                <argument>-XX:MaxNewSize=128m</argument>
-                                <argument>-XX:CMSInitiatingOccupancyFraction=70</argument>
-                                <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
-                                <argument>-XX:MaxGCPauseMillis=100</argument>
-                                <argument>-XX:+CMSClassUnloadingEnabled</argument>
-                                <argument>-XX:MaxDirectMemorySize=1g</argument>
+                                <argument>-XX:+UseG1GC</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>argument>
+                                <argument>-XX:MaxHeapFreeRatio=30</argument>argument>
                                 <argument>-enableassertions</argument>
                                 <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4000</argument>
                                 <!-- Setting the updateSystemProcs option to true causes all of the system stored procedures to be re-created on server startup. -->
@@ -1479,18 +1481,11 @@
                                 <argument>
                                     -Djava.library.path=${project.build.directory}/../../assembly/${envClassifier}/native/${os.detected.classifier}:/usr/local/lib/
                                 </argument>
-                                <argument>-Xmx4g</argument>
-                                <argument>-Xmn128m</argument>
-                                <argument>-XX:+UseConcMarkSweepGC</argument>
-                                <argument>-XX:+UseParNewGC</argument>
-                                <argument>-XX:NewSize=128m</argument>
-                                <argument>-XX:MaxNewSize=128m</argument>
-                                <argument>-XX:CMSInitiatingOccupancyFraction=70</argument>
-                                <argument>-XX:+UseCMSInitiatingOccupancyOnly</argument>
-                                <argument>-XX:MaxGCPauseMillis=100</argument>
-                                <argument>-Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=4001</argument>
-                                <argument>-XX:+CMSClassUnloadingEnabled</argument>
-                                <argument>-XX:MaxDirectMemorySize=1g</argument>
+                                <argument>-Xmx2g</argument>
+                                <argument>-Xms64m</argument>
+                                <argument>-XX:+UseG1GC</argument>
+                                <argument>-XX:MinHeapFreeRatio=10</argument>argument>
+                                <argument>-XX:MaxHeapFreeRatio=30</argument>argument>
                                 <argument>com.splicemachine.test.SpliceTestClusterParticipant</argument>
                                 <argument>${project.build.directory}</argument>
                                 <argument>${memberNumber}</argument>
